--- a/src/components/display.css
+++ b/src/components/display.css
@@ -1,3 +1,9 @@
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   background: #b3e6ff;
   width: 350px;
